--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.5
+  lucide_icons: ^0.257.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
