--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.3.5
   lucide_icons: ^0.257.0
   flutter_svg: ^2.0.9
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
